tests/semantic/number_constants/number_constants.err
Error: Number constant not in range [-2^31, 2^31-1] in file number_constants.dl at line 13
R(2147483648). // error: out of range
--^-----------------------------------
Error: Number constant not in range [-2^31, 2^31-1] in file number_constants.dl at line 18
R(-2147483649). // error: out of range
---^-----------------------------------
Error: Number constant not in range [-2^31, 2^31-1] in file number_constants.dl at line 19
R(- 2147483649). // error: out of range
----^-----------------------------------
Error: Number constant not in range [-2^31, 2^31-1] in file number_constants.dl at line 30
R(2147483647-2147483648). // error: out of range
-------------^-----------------------------------
Error: Number constant not in range [-2^31, 2^31-1] in file number_constants.dl at line 31
R(2147483647- 2147483648). // error: out of range
--------------^-----------------------------------
Error: Number constant not in range [-2^31, 2^31-1] in file number_constants.dl at line 32
R(2147483647 -2147483648). // error: out of range
--------------^-----------------------------------
Error: Number constant not in range [-2^31, 2^31-1] in file number_constants.dl at line 33
R(2147483647 - 2147483648). // error: out of range
---------------^-----------------------------------
7 errors generated, evaluation aborted
